--- a/ClashOfSnakes/Properties/Resources.resx
+++ b/ClashOfSnakes/Properties/Resources.resx
@@ -211,4 +211,7 @@
   <data name="tailB4" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tailB4.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="wall" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\wall.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
